--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -13,7 +13,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/6536985?v=3",
       "profile": "http://ggdaltoso.info",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
