--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -23,7 +23,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/22479629?v=3",
       "profile": "https://github.com/lenonestrella",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
